--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ li a {
 
     #topban{
 left: 0px;
-width: 110%;
+width: 100%;
 float:none;
     }
 
@@ -180,6 +180,7 @@ width:100%;
       left:0px;
       top:150px;
         position:absolute;
+        flex-wrap: wrap;
     }
 
     #leftsection{
@@ -196,5 +197,14 @@ width:100%;
 
     .pic{
 max-width: 55%;
+    }
+
+    .listbutt{
+      width:60%;
+      font-size:60%;
+      position:fixed;
+      padding: 3px;
+      margin-top: 15px;
+      margin-left: 8px;
     }
   }
